syntax = "proto3";

package ticktrader.algo.server.publicApi;

option csharp_namespace = "TickTrader.Algo.Server.PublicAPI";


message ClientClaims {
    enum AccessLevel {
        ANONYMOUS = 0;
        VIEWER = 1;
        DEALER = 2;
        ADMIN = 3;
    }
}

message RequestResult {
    enum RequestStatus {
        SUCCESS = 0;
        INTERNAL_SERVER_ERROR = 1;
        UNAUTHORIZED = 2;
        REJECT = 3;
        NOT_ALLOWED = 4;
    }

    RequestStatus status = 1;
    string message = 2;
}